--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque officiis ex nemo quos sit porro quibusdam? Quibusdam voluptate sed eligendi cupiditate, consequatur ipsam, temporibus quo, officia illum eum maiores dignissimos.</p>
     <h1>First</h1>
+    <h1>Second</h1>
 </body>
 </html>
